[gd_scene load_steps=2 format=3 uid="uid://bn5xk8prmj2qh"]

[ext_resource type="Script" path="res://scenes/ui/shops/screens/church_action_select.gd" id="1_church_action"]

[node name="ChurchActionSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_church_action")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HealButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "HEAL"

[node name="ReviveButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "REVIVE"

[node name="UncurseButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "UNCURSE"

[node name="PromoteButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "PROMOTE"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "EXIT"
